# llauncher

./: .env.example  .gitignore  README.md  enhancement_repeat_penalty.md  pyproject.toml  pytest.ini  test-coverage-plan.md
docs/: 1-architecture-layers.md  2-cross-layer-reach.md  3-refresh-reconcile-patterns.md  4-state-ownership.md  MCP.md  PLAN-architectural-remediation.md  PLAN-phase1-implementation.md  v2-handoff.md  v2-implementation-roadmap.md
docs/PLANS/: CLI-IMPLEMENTATION.md
docs/adrs/: 001-ts-extension-for-pi.md  002-swap-eviction-consistency.md  003-agent-api-authentication.md  004-cli-subcommand-interface.md  005-model-cache-health.md  006-gpu-resource-monitoring.md  008-launcher-state-stateless-facade.md  009-symmetric-hub-spoke-topology.md  010-port-ownership-at-call-site.md  011-swap-semantics-v2.md
docs/plans/: phase1-verification.md
docs/reviews/: 2026-04-25-bug-code-review-findings.md  2026-04-25-enhancement-no-auth-agent-api.md  2026-05-02-v2-orientation-spike.md  phase1-implementation-review.md
llauncher/: __init__.py  __main__.py  cli.py  operations.py  state.py
llauncher/agent/: __init__.py  __main__.py  config.py  middleware.py  routing.py  server.py
llauncher/core/: __init__.py  audit_log.py  config.py  discovery.py  gpu.py  lockfile.py  marker.py  model_health.py  process.py  settings.py
llauncher/mcp/: server.py
llauncher/mcp_server/: __init__.py  __main__.py  server.py
llauncher/models/: __init__.py  config.py
llauncher/operations/: __init__.py  delete.py  preflight.py  start.py  stop.py  swap.py
llauncher/remote/: __init__.py  node.py  registry.py  state.py
llauncher/ui/: __init__.py  app.py  utils.py
llauncher/util/: __init__.py  cache.py
pi-footer-extension/: footer-budget.ts  test-footer-validation.mjs
pi-footer-extension/docs/: MANUAL_TEST_CHECKLIST.md  footer-budget-requirements.md  footer-extension-cheatsheet.md
scripts/: run.bat  run.sh
tests/: conftest.py
tests/integration/: test_adr_cross_cutting.py  test_state.py  test_swap.py  test_ui.py
tests/unit/: test_agent.py  test_agent_middleware.py  test_agent_models_health_api.py  test_audit_log.py  test_cli.py  test_config.py  test_core_settings_auth.py  (+22 more)
(+54 files in other folders)
