[project]
name = "llauncher"
version = "0.1.0"
description = "MCP-first launcher for managing llama.cpp llama-server instances"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "psutil>=5.9.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.30.0"]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
]

[project.scripts]
llauncher-mcp = "llauncher.mcp.server:main"
llauncher-agent = "llauncher.agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
